k8s/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-reverse-proxy
spec:
  type: ClusterIP
  selector:
    app: nginx-reverse-proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
