k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grpc-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: grpc-server-service
                port:
                  number: 50051
      # do not specify host here so that the ingress controller
      # routes all traffic to the grpc-server-service
      # host: grpc-server.local
